--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -34,7 +34,7 @@
 }
 
 .squareImg {
-  background-color: gray;
+  /* background-color: gray; */
   width: 400px;
   height: 260px;
   opacity: 0;
@@ -42,7 +42,7 @@
   animation: imageAnim 1.3s ease-out 0.6s normal forwards;
 }
 
-.squareImg img {
+.squareImg > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -81,7 +81,7 @@
   overflow: hidden;
 }
 
-.text div div {
+.text div p {
   margin-right: 5px;
   opacity: 0;
   animation: textAnim 1.3s ease 0.9s normal forwards;
@@ -90,7 +90,7 @@
 @keyframes textAnim {
   0% {
     opacity: 1;
-    transform: translateY(80px) rotate(-5deg);
+    transform: translateY(80px) rotate(-8deg);
   }
   100% {
     opacity: 1;
