--- a/styles/Works.module.css
+++ b/styles/Works.module.css
@@ -49,11 +49,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .img img {
   width: 100%;
-  height: 100%;
+  height: 140%;
   object-fit: cover;
 }
 
