--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,4 +1,7 @@
 .container {
+  /* display: flex;
+  flex-direction: column; */
   height: 400vh;
-  padding-top: 10rem;
+  /* padding-top: 10rem; */
+  /* gap: 200px; */
 }
