--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   margin: 0 auto;
   min-height: 100vh;
+  transition: background-color 0.3s;
+  color: #fde7e7;
 }
 
 @media only screen and (max-width: 640px) {
