--- a/styles/Works.module.css
+++ b/styles/Works.module.css
@@ -12,6 +12,16 @@
   align-items: center;
   justify-content: center;
   gap: 100px;
+  position: relative;
+}
+
+.scroller {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60px;
+  height: 10px;
 }
 
 .heading {
