--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,7 +1,7 @@
 .container {
   /* display: flex;
   flex-direction: column; */
-  /* height: 350vh; */
+  /* height: max-content; */
   /* padding-top: 10rem; */
   /* gap: 200px; */
 }
