--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -108,3 +108,50 @@
     transform: scaleY(1);
   }
 }
+
+@media only screen and (max-width: 660px) {
+  .top {
+    margin-top: 2rem;
+    flex-direction: column-reverse;
+    gap: 2rem;
+    justify-content: center;
+  }
+  .squareImg {
+    width: 230px;
+    height: 230px;
+    border-radius: 50%;
+  }
+
+  .content {
+    width: 85%;
+    gap: 3rem;
+  }
+
+  .heading {
+    width: 100%;
+  }
+
+  .heading div {
+    overflow: initial;
+  }
+
+  .heading h1 {
+    font-family: var(--font);
+    font-size: 1.8rem;
+    opacity: 0;
+    animation: textAnim 1.3s ease 0.8s normal forwards;
+  }
+
+  .bottom {
+    display: initial;
+  }
+
+  .rectangleImg {
+    display: none;
+  }
+
+  .text {
+    width: 90%;
+    font-size: 1.1rem;
+  }
+}
