--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -5,3 +5,9 @@
   /* padding-top: 10rem; */
   /* gap: 200px; */
 }
+
+@media only screen and (max-width: 660px) {
+  .container {
+    display: none;
+  }
+}
