--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 100vh;
-  /* opacity: 0; */
+  opacity: 0;
 }
 
 @media only screen and (max-width: 660px) {
