--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,15 +1,39 @@
 .container {
   /* background-color: #cccccc; */
   position: fixed;
-  top: 5%;
+  top: 7%;
   left: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .container nav {
   margin: 0 auto;
-  width: 90%;
+  width: 93%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  pointer-events: none;
+  transition: all 0.5s var(--cubic);
+  z-index: -1;
+}
+
+.active {
+  pointer-events: all;
+  opacity: 1;
+  background-color: rgba(223, 223, 223, 0.431);
+}
+
+@media only screen and (max-width: 660px) {
+  .container {
+    top: 2%;
+  }
 }
