--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   min-height: 100vh;
   transition: background-color 0.5s;
+  position: relative;
 }
 
 @media only screen and (max-width: 640px) {
