--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   gap: 100vh;
   opacity: 0;
+  pointer-events: none;
 }
 
 @media only screen and (max-width: 660px) {
