--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -35,8 +35,10 @@
 
 .squareImg {
   background-color: gray;
-  width: 400px;
-  height: 260px;
+  /* width: 400px;
+  height: 260px; */
+  width: 35%;
+  height: 35vh;
   opacity: 0;
   transform-origin: top;
   animation: imageAnim 1.3s ease-out 0.6s normal forwards;
@@ -56,8 +58,9 @@
 
 .rectangleImg {
   background-color: gray;
-  width: 50%;
-  height: 260px;
+  width: 45%;
+  /* height: 260px; */
+  height: 40vh;
   opacity: 0;
   transform-origin: top;
   animation: imageAnim 1.3s ease-out 1s normal forwards;
