--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -24,6 +24,7 @@
   pointer-events: none;
   transition: all 0.5s var(--cubic);
   z-index: -1;
+  cursor: none;
 }
 
 .active {
@@ -36,4 +37,14 @@
   .container {
     top: 2%;
   }
+}
+
+.test {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 0.5rem;
 }
