--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,3 +53,13 @@ a {
 .hamburger-react {
   cursor: none !important;
 }
+
+.test {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 0.5rem;
+}
