--- a/styles/Cursor.module.css
+++ b/styles/Cursor.module.css
@@ -9,10 +9,14 @@
   transform: translate(-50%, -50%) scale(2);
   border-radius: 50%;
   pointer-events: none;
-  transition: 0.3s;
-  transition-property: width, height, background-color;
-  background-color: black;
+  transition: all 0.3s ease-out;
+  transition-property: width, height, background-color, opacity;
+  background-color: rgb(0, 0, 0);
+  overflow: hidden;
 }
 
-.blend {
+@media only screen and (max-width: 660px) {
+  .cursor {
+    display: none;
+  }
 }
