--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -10,8 +10,18 @@
   display: flex;
   flex-direction: column;
   gap: 100vh;
-  opacity: 0;
+  /* opacity: 0; */
   pointer-events: none;
+  position: relative;
+}
+
+.black {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #ffffff0c;
 }
 
 @media only screen and (max-width: 660px) {
