--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -63,7 +63,7 @@
   text-decoration: underline;
   font-size: 1.2rem;
   text-underline-offset: 5px;
-  cursor: pointer;
+  cursor: none;
 }
 
 @media only screen and (max-width: 660px) {
