--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,7 +1,7 @@
 .container {
   /* background-color: #cccccc; */
   position: fixed;
-  top: 7%;
+  top: 5%;
   left: 0;
   width: 100%;
   z-index: 10;
@@ -9,10 +9,15 @@
 
 .container nav {
   margin: 0 auto;
-  width: 93%;
+  width: 90%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.logo h1 {
+  font-family: var(--font);
+  font-size: 2rem;
 }
 
 .overlay {
