--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -14,7 +14,7 @@
 }
 
 .left {
-  width: 550px;
+  width: 560px;
   display: flex;
   flex-direction: column;
   gap: 4.5rem;
@@ -31,6 +31,7 @@
 }
 
 .links {
+  padding-left: 1rem;
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -39,5 +40,6 @@
 
 .links li {
   font-family: var(--font);
-  font-size: 3.2rem;
+  font-size: 3.3rem;
+  font-weight: 300;
 }
