--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -71,12 +71,10 @@
 }
 
 .leftImage {
-  transform: translate(-140px, -80px);
   animation: leftAnim 1s cubic-bezier(0.14, 0.6, 0.41, 0.99) 0s 1 forwards;
 }
 
 .rightImage {
-  transform: translate(140px, -160px);
   animation: rightAnim 1s cubic-bezier(0.14, 0.6, 0.41, 0.99) 0.05s 1 forwards;
 }
 
@@ -86,11 +84,6 @@
   height: 450px;
   object-fit: cover;
 }
-
-/* .leftImage:hover,
-.rightImage:hover {
-  width: 200px;
-} */
 
 @keyframes leftAnim {
   0% {
@@ -131,34 +124,25 @@
 
 .one {
   z-index: 1;
-  transform: translate(-140px, -60px);
   animation: oneAnim 1s cubic-bezier(0.14, 0.6, 0.41, 0.99) 0s 1 forwards;
 }
 
 .two {
-  transform: translate(130px, -140px);
   animation: twoAnim 1s cubic-bezier(0.14, 0.6, 0.41, 0.99) 0.1s 1 forwards;
 }
 
 .three {
   z-index: 2;
-  transform: translate(40px, 70px);
-  animation: threeAnim 1s cubic-bezier(0.14, 0.6, 0.41, 0.99) 0.2s 1 forwards;
+  animation: threeAnim 1s cubic-bezier(0.14, 0.6, 0.41, 0.99) 0.15s 1 forwards;
 }
 
-.one img,
+/* .one img,
 .two img,
 .three img {
   width: 280px;
   height: 400px;
   object-fit: cover;
-}
-
-.one:hover,
-.two:hover,
-.three:hover {
-  width: 200px;
-}
+} */
 
 @keyframes oneAnim {
   0% {
@@ -189,7 +173,7 @@
 @keyframes threeAnim {
   0% {
     width: 100px;
-    transform: translate(40px, -170px);
+    transform: translate(40px, -20px);
     opacity: 1;
   }
   100% {
