--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -111,6 +111,17 @@
   }
 }
 
+@keyframes scaleAnim {
+  0% {
+    opacity: 1;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 @media only screen and (max-width: 660px) {
   .top {
     margin-top: 2rem;
@@ -122,6 +133,8 @@
     width: 230px;
     height: 230px;
     border-radius: 50%;
+    transform-origin: center;
+    animation: scaleAnim 1.3s ease-out 0.6s normal forwards;
   }
 
   .content {
